// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Chips Default smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-chip-option selected
                   class="mat-mdc-chip mat-mdc-chip-option mat-accent mdc-evolution-chip mat-mdc-standard-chip mdc-evolution-chip--filter mdc-evolution-chip--selectable mat-mdc-chip-selected mdc-evolution-chip--selected mdc-evolution-chip--selecting mdc-evolution-chip--with-primary-graphic"
                   ng-reflect-selected
                   ng-reflect-color="accent"
                   ng-reflect-highlighted="false"
                   ng-reflect-disabled="false"
                   ng-reflect-role="button"
                   ng-reflect-disable-ripple="false"
                   ng-reflect-id="1"
                   ng-reflect-value="chip"
                   ng-reflect-removable="false"
                   id="1"
                   role="presentation"
                   aria-label="chip"
  >
    <span matripple
          class="mat-ripple mat-mdc-chip-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLElement]"
    >
    </span>
    <span class="mat-mdc-chip-focus-overlay">
    </span>
    <span class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary">
      <button matchipaction
              role="option"
              class="mdc-evolution-chip__action mat-mdc-chip-action mdc-evolution-chip__action--primary"
              type="button"
              ng-reflect-tab-index="-1"
              ng-reflect-_allow-focus-when-disabled="true"
              aria-selected="true"
              aria-describedby="mat-mdc-chip-0-aria-description"
              tabindex="-1"
              aria-disabled="false"
              aria-label="chip"
      >
        <span class="mdc-evolution-chip__graphic mat-mdc-chip-graphic">
          <span class="mdc-evolution-chip__checkmark">
            <svg viewbox="-2 -3 30 30"
                 focusable="false"
                 class="mdc-evolution-chip__checkmark-svg"
            >
              <path fill="none"
                    stroke="currentColor"
                    d="M1.73,12.91 8.1,19.28 22.79,4.59"
                    class="mdc-evolution-chip__checkmark-path"
              >
              </path>
            </svg>
          </span>
        </span>
        <span class="mdc-evolution-chip__text-label mat-mdc-chip-action-label">
          One fish
          <span class="mat-mdc-chip-primary-focus-indicator mat-mdc-focus-indicator">
          </span>
        </span>
      </button>
    </span>
    <span class="cdk-visually-hidden"
          id="mat-mdc-chip-0-aria-description"
    >
      chip
    </span>
  </mat-chip-option>
</storybook-root>
`;

exports[`Components/Chips Disabled smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-chip-option selected
                   class="mat-mdc-chip mat-mdc-chip-option mat-accent mdc-evolution-chip mdc-evolution-chip--disabled mat-mdc-chip-disabled mat-mdc-standard-chip mdc-evolution-chip--filter mdc-evolution-chip--selectable mat-mdc-chip-selected mdc-evolution-chip--selected mdc-evolution-chip--selecting mdc-evolution-chip--with-primary-graphic"
                   ng-reflect-selected
                   ng-reflect-color="accent"
                   ng-reflect-highlighted="false"
                   ng-reflect-disabled="true"
                   ng-reflect-role="button"
                   ng-reflect-disable-ripple="false"
                   ng-reflect-id="1"
                   ng-reflect-value="chip"
                   ng-reflect-removable="false"
                   id="1"
                   role="presentation"
                   aria-label="chip"
  >
    <span matripple
          class="mat-ripple mat-mdc-chip-ripple"
          ng-reflect-disabled="true"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLElement]"
    >
    </span>
    <span class="mat-mdc-chip-focus-overlay">
    </span>
    <span class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary">
      <button matchipaction
              role="option"
              class="mdc-evolution-chip__action mat-mdc-chip-action mdc-evolution-chip__action--primary"
              type="button"
              ng-reflect-tab-index="-1"
              ng-reflect-_allow-focus-when-disabled="true"
              aria-selected="true"
              aria-describedby="mat-mdc-chip-4-aria-description"
              tabindex="-1"
              aria-disabled="true"
              aria-label="chip"
      >
        <span class="mdc-evolution-chip__graphic mat-mdc-chip-graphic">
          <span class="mdc-evolution-chip__checkmark">
            <svg viewbox="-2 -3 30 30"
                 focusable="false"
                 class="mdc-evolution-chip__checkmark-svg"
            >
              <path fill="none"
                    stroke="currentColor"
                    d="M1.73,12.91 8.1,19.28 22.79,4.59"
                    class="mdc-evolution-chip__checkmark-path"
              >
              </path>
            </svg>
          </span>
        </span>
        <span class="mdc-evolution-chip__text-label mat-mdc-chip-action-label">
          One fish
          <span class="mat-mdc-chip-primary-focus-indicator mat-mdc-focus-indicator">
          </span>
        </span>
      </button>
    </span>
    <span class="cdk-visually-hidden"
          id="mat-mdc-chip-4-aria-description"
    >
      chip
    </span>
  </mat-chip-option>
</storybook-root>
`;

exports[`Components/Chips Highlighted smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-chip-option selected
                   class="mat-mdc-chip mat-mdc-chip-option mat-accent mdc-evolution-chip mat-mdc-chip-highlighted mat-mdc-standard-chip mdc-evolution-chip--filter mdc-evolution-chip--selectable mat-mdc-chip-selected mdc-evolution-chip--selected mdc-evolution-chip--selecting mdc-evolution-chip--with-primary-graphic"
                   ng-reflect-selected
                   ng-reflect-color="accent"
                   ng-reflect-highlighted="true"
                   ng-reflect-disabled="false"
                   ng-reflect-role="button"
                   ng-reflect-disable-ripple="false"
                   ng-reflect-id="1"
                   ng-reflect-value="chip"
                   ng-reflect-removable="false"
                   id="1"
                   role="presentation"
                   aria-label="chip"
  >
    <span matripple
          class="mat-ripple mat-mdc-chip-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLElement]"
    >
    </span>
    <span class="mat-mdc-chip-focus-overlay">
    </span>
    <span class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary">
      <button matchipaction
              role="option"
              class="mdc-evolution-chip__action mat-mdc-chip-action mdc-evolution-chip__action--primary"
              type="button"
              ng-reflect-tab-index="-1"
              ng-reflect-_allow-focus-when-disabled="true"
              aria-selected="true"
              aria-describedby="mat-mdc-chip-3-aria-description"
              tabindex="-1"
              aria-disabled="false"
              aria-label="chip"
      >
        <span class="mdc-evolution-chip__graphic mat-mdc-chip-graphic">
          <span class="mdc-evolution-chip__checkmark">
            <svg viewbox="-2 -3 30 30"
                 focusable="false"
                 class="mdc-evolution-chip__checkmark-svg"
            >
              <path fill="none"
                    stroke="currentColor"
                    d="M1.73,12.91 8.1,19.28 22.79,4.59"
                    class="mdc-evolution-chip__checkmark-path"
              >
              </path>
            </svg>
          </span>
        </span>
        <span class="mdc-evolution-chip__text-label mat-mdc-chip-action-label">
          One fish
          <span class="mat-mdc-chip-primary-focus-indicator mat-mdc-focus-indicator">
          </span>
        </span>
      </button>
    </span>
    <span class="cdk-visually-hidden"
          id="mat-mdc-chip-3-aria-description"
    >
      chip
    </span>
  </mat-chip-option>
</storybook-root>
`;

exports[`Components/Chips Primary smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-chip-option selected
                   class="mat-mdc-chip mat-mdc-chip-option mat-primary mdc-evolution-chip mat-mdc-standard-chip mdc-evolution-chip--filter mdc-evolution-chip--selectable mat-mdc-chip-selected mdc-evolution-chip--selected mdc-evolution-chip--selecting mdc-evolution-chip--with-primary-graphic"
                   ng-reflect-selected
                   ng-reflect-color="primary"
                   ng-reflect-highlighted="false"
                   ng-reflect-disabled="false"
                   ng-reflect-role="button"
                   ng-reflect-disable-ripple="false"
                   ng-reflect-id="1"
                   ng-reflect-value="chip"
                   ng-reflect-removable="false"
                   id="1"
                   role="presentation"
                   aria-label="chip"
  >
    <span matripple
          class="mat-ripple mat-mdc-chip-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLElement]"
    >
    </span>
    <span class="mat-mdc-chip-focus-overlay">
    </span>
    <span class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary">
      <button matchipaction
              role="option"
              class="mdc-evolution-chip__action mat-mdc-chip-action mdc-evolution-chip__action--primary"
              type="button"
              ng-reflect-tab-index="-1"
              ng-reflect-_allow-focus-when-disabled="true"
              aria-selected="true"
              aria-describedby="mat-mdc-chip-1-aria-description"
              tabindex="-1"
              aria-disabled="false"
              aria-label="chip"
      >
        <span class="mdc-evolution-chip__graphic mat-mdc-chip-graphic">
          <span class="mdc-evolution-chip__checkmark">
            <svg viewbox="-2 -3 30 30"
                 focusable="false"
                 class="mdc-evolution-chip__checkmark-svg"
            >
              <path fill="none"
                    stroke="currentColor"
                    d="M1.73,12.91 8.1,19.28 22.79,4.59"
                    class="mdc-evolution-chip__checkmark-path"
              >
              </path>
            </svg>
          </span>
        </span>
        <span class="mdc-evolution-chip__text-label mat-mdc-chip-action-label">
          One fish
          <span class="mat-mdc-chip-primary-focus-indicator mat-mdc-focus-indicator">
          </span>
        </span>
      </button>
    </span>
    <span class="cdk-visually-hidden"
          id="mat-mdc-chip-1-aria-description"
    >
      chip
    </span>
  </mat-chip-option>
</storybook-root>
`;

exports[`Components/Chips Warn smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-chip-option selected
                   class="mat-mdc-chip mat-mdc-chip-option mat-warn mdc-evolution-chip mat-mdc-standard-chip mdc-evolution-chip--filter mdc-evolution-chip--selectable mat-mdc-chip-selected mdc-evolution-chip--selected mdc-evolution-chip--selecting mdc-evolution-chip--with-primary-graphic"
                   ng-reflect-selected
                   ng-reflect-color="warn"
                   ng-reflect-highlighted="false"
                   ng-reflect-disabled="false"
                   ng-reflect-role="button"
                   ng-reflect-disable-ripple="false"
                   ng-reflect-id="1"
                   ng-reflect-value="chip"
                   ng-reflect-removable="false"
                   id="1"
                   role="presentation"
                   aria-label="chip"
  >
    <span matripple
          class="mat-ripple mat-mdc-chip-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLElement]"
    >
    </span>
    <span class="mat-mdc-chip-focus-overlay">
    </span>
    <span class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary">
      <button matchipaction
              role="option"
              class="mdc-evolution-chip__action mat-mdc-chip-action mdc-evolution-chip__action--primary"
              type="button"
              ng-reflect-tab-index="-1"
              ng-reflect-_allow-focus-when-disabled="true"
              aria-selected="true"
              aria-describedby="mat-mdc-chip-2-aria-description"
              tabindex="-1"
              aria-disabled="false"
              aria-label="chip"
      >
        <span class="mdc-evolution-chip__graphic mat-mdc-chip-graphic">
          <span class="mdc-evolution-chip__checkmark">
            <svg viewbox="-2 -3 30 30"
                 focusable="false"
                 class="mdc-evolution-chip__checkmark-svg"
            >
              <path fill="none"
                    stroke="currentColor"
                    d="M1.73,12.91 8.1,19.28 22.79,4.59"
                    class="mdc-evolution-chip__checkmark-path"
              >
              </path>
            </svg>
          </span>
        </span>
        <span class="mdc-evolution-chip__text-label mat-mdc-chip-action-label">
          One fish
          <span class="mat-mdc-chip-primary-focus-indicator mat-mdc-focus-indicator">
          </span>
        </span>
      </button>
    </span>
    <span class="cdk-visually-hidden"
          id="mat-mdc-chip-2-aria-description"
    >
      chip
    </span>
  </mat-chip-option>
</storybook-root>
`;
